Added logic interacting with DOM

--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="styles.css">
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+  <h1>Rock Paper Scissors</h1>
+
+  <div class="game">
+    
+    <div class="game-play">
+      <div class="computer">
+        <h2>Computer</h2>
+        <div class="computer-choice">
+      </div>
+
+      <div class="human">
+        <h2>Human</h2>
+        <button id="human-rock">Rock</button>
+        <button id="human-paper">Paper</button>
+        <button id="human-scissors">Scissors</button>
+      </div>
+    </div>
+  
+    <div class="game-score">
+      <h2>Computer: </h2>
+      <h2>Human: </h2>
+    </div>
+
+  </div>
+
+  </div>
+  
   
 </body>
 </html>
