Added images that respond to dom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="game-play">
       <div class="computer">
         <h2>Computer</h2>
-        <div class="computer-choice">
+        <div id="computer-choice"></div>
       </div>
 
       <div class="human">
