--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
     </div>
   
     <div class="game-score">
-      <h2>Computer: </h2>
-      <h2>Human: </h2>
+      <div id="score-announce">
+      </div>
+      <div id="computer-scoreboard">
+        <h2>Computer: </h2>
+      </div>
+      <div id="human-scoreboard">
+        <h2>Human: </h2>
+      </div>
+      
     </div>
 
   </div>
